<resources>
    <string name="app_name">LBARSNS</string>
    <string name="facebook_app_id">252264892086675</string>
    <string name="fb_login_protocol_scheme">fb252264892086675</string>

    <!-- Sign In -->
    <string name="email">전화번호, 이메일 주소 또는 사용자 이름</string>
    <string name="password">비밀번호</string>
    <string name="signin_email">로그인</string>
    <string name="signin_or">또는</string>
    <string name="signin_google">Google으로 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="signin_twitter">Twitter으로 로그인</string>
    <string name="signup_txt">계정이 없으신가요?</string>
    <string name="signup_btn">가입하기.</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>


    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">님이 좋아요를 눌렀습니다.</string>
    <string name="alarm_who">님이</string>
    <string name="alarm_comment">메세지를 남겼습니다.</string>
    <string name="alarm_follow">님이 당신의 계정을 팔로워하기 시작했습니다.</string>

    <!-- Comment -->
    <string name="send">보내기</string>

    <!-- Add Photo -->
    <string name="crop_image">다음</string>
    <string name="upload_image">사진 올리기</string>
    <string name="hint_image_content">내용</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>
    <string name="Write_text">문구 입력...</string>
    <string name="add_gps">위치 추가</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 이거 일단 넣어놔-->
    <string name="app_title">Image Cropper</string>
    <string name="result_image_desc">crop result</string>

    <string name="main_drawer_load">Load Image for cropping</string>
    <string name="add_drawer_open">Open navigation drawer</string>
    <string name="add_drawer_close">Close navigation drawer</string>

    <string name="add_action_crop">CROP</string>
    <string name="add_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="add_action_flip">Flip</string>
    <string name="add_action_flip_horizontally">Flip horizontally</string>
    <string name="add_action_flip_vertically">Flip vertically</string>
    <string name="drawer_option_title">Crop View Presets</string>
    <string name="drawer_option_oval">Circular</string>
    <string name="drawer_option_rect">Rectangular</string>
    <string name="drawer_option_min_max">Min/Max limits override</string>
    <string name="drawer_option_customized_overlay">Customized Overlay</string>
    <string name="drawer_option_scale_center">Scale Center Inside</string>
    <string name="drawer_option_title2">Customization Toggles</string>
    <string name="drawer_option_toggle_scale">Image Scale: %1s</string>
    <string name="drawer_option_toggle_shape">Crop Shape: %1s</string>
    <string name="drawer_option_toggle_guidelines">Guidelines: %1s</string>
    <string name="drawer_option_toggle_aspect_ratio">Aspect Ratio: %1s</string>
    <string name="drawer_option_toggle_auto_zoom">Auto zoom: %1s</string>
    <string name="drawer_option_toggle_max_zoom">Max zoom level: %1s</string>
    <string name="drawer_option_set_initial_crop_rect">Set initial crop rectangle</string>
    <string name="drawer_option_reset_crop_rect">Reset crop rectangle to initial</string>
    <string name="drawer_option_toggle_multitouch">Multitouch: %1s</string>
    <string name="drawer_option_toggle_show_overlay">Show Overlay: %1s</string>
    <string name="drawer_option_toggle_show_progress_bar">Show Progress Bar: %1s</string>
</resources>