<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UserFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">


            <ImageView
                android:id="@+id/account_iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                tools:src="@drawable/ic_account" />

            <Button
                android:id="@+id/account_btn_follow_signout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/account_iv_profile"
                android:text="@string/follow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/account_btn_follow_signout"
                android:layout_toEndOf="@+id/account_iv_profile"
                android:gravity="center">

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post" />

                    <TextView
                        android:id="@+id/account_tv_post_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_0" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follower" />

                    <TextView
                        android:id="@+id/account_tv_follower_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_0" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following" />

                    <TextView
                        android:id="@+id/account_tv_following_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_0" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/account_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
        </android.support.v7.widget.RecyclerView>


    </LinearLayout>
</layout>