<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".sns.UploadActivity">

        <!-- Toolbar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo_title" />

                <TextView
                    android:id="@+id/add_photo_btn_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/upload_image"
                    android:textColor="@color/colorDeepBlue"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorDeepGray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <ImageView
                android:id="@+id/upload_iv_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                tools:src="@drawable/ic_account" />

            <EditText
                android:textColor="@color/colorBlack"
                android:id="@+id/upload_et_explain"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/upload_iv_photo"
                android:hint="@string/Write_text"
                android:padding="5dp"
                android:textSize="@dimen/default_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorLightGray" />

        <RelativeLayout
            android:id="@+id/upload_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/upload_tv_gps_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/add_gps"
                android:textStyle="bold" />

            <ImageView
                android:layout_centerInParent="true"
                android:layout_marginEnd="30dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/upload_iv_gps"
                android:src="@drawable/gps"
                android:shadowColor="@color/colorDeepBlue"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/upload_tv_gps_text"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/upload_tv_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text_size"
                    android:text="lat: 127.23.1231" />

                <TextView
                    android:id="@+id/upload_tv_lon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="@dimen/small_text_size"
                    android:text="lon: 38.213.1231" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorLightGray" />




    </LinearLayout>
</layout>